#访问者设计模式
#一个作用于某对象结构中的各元素的操作，
#它可以使你可以在不改变各元素类的前提下定义作用于这些对象的操作。
@startuml
abstract class Visitor{
    + {abstract} void visitConcrectElementA(ConcrectElementA concrectElementA)
    + {abstract} void visitConcrectElementB(ConcrectElementB concrectElementB)
}

abstract class Element{
    + {abstract} void accept(Visitor visitor)
}

class ConcrectElementA
class ConcrectElementB

Element <|-- ConcrectElementA : extends
ConcrectElementA <-- Visitor : Association
Element <|-- ConcrectElementB : extends
ConcrectElementB <-- Visitor : Association
@enduml